# kiwix-tools

./: .clang-format  .readthedocs.yaml  .travis.yml  AUTHORS  Changelog  README.md  format_code.sh  meson.build  meson_options.txt
.github/workflows/: ci.yml  docker.yml  package.yml  pr.yml
debian/: changelog  control
docker/: Dockerfile  README.md
docker/server/: Dockerfile  Dockerfile.armhf  README.md  docker-compose.yml.example  generate-library  start.sh
docs/: conf.py  index.rst  kiwix-serve.rst  meson.build
include/: version.h
scripts/kiwix-builder/: kiwix-builder.py
scripts/kiwix-builder/patches/: CTPP2SourceLoader.hpp.patch  ctpp2_include.patch  pugixml_meson.patch  xapian_pkgconfig.patch
src/: Makefile.am.alt  Makefile.am.orig  meson.build  version.h
src/contentManager/: ContentManagerWrapper.cpp  ContentManagerWrapper.h  Makefile  contentCTester.c  contentManager.cpp  contentManager.h  contentManagerTester.cpp
src/ctpp2/: Makefile.am.alt  Makefile.am.orig
src/ctpp2/include/: CDT.hpp  CDTSortRoutines.hpp  CTPP2BitIndex.hpp  CTPP2CharIterator.hpp  CTPP2Compiler.hpp  CTPP2DTOA.hpp  CTPP2Error.hpp  CTPP2ErrorCodes.h  CTPP2Exception.hpp  CTPP2FileLogger.hpp  CTPP2FileOutputCollector.hpp  CTPP2FileSourceLoader.hpp  CTPP2GlobalDefines.h  CTPP2HashTable.hpp  CTPP2JSONFileParser.hpp  CTPP2JSONParser.hpp  CTPP2Logger.hpp  CTPP2OutputCollector.hpp  CTPP2Parser.hpp  CTPP2ParserException.hpp  CTPP2SourceLoader.hpp  CTPP2Sprintf.hpp  CTPP2StaticData.hpp  CTPP2StaticText.hpp  CTPP2StringBuffer.hpp  (+37 more)
src/ctype/: Makefile  Makefile.am.orig  Makefile.in
src/dependences/: .mozconfig  Makefile.xapian.mvsc
src/indexer/: Makefile.am.alt  Makefile.am.orig  Makefile.mvsc  kiwix-index.cpp  meson.build
src/installer/: Makefile.am.alt  Makefile.am.orig  Makefile.mvsc  kiwix-install.cpp  meson.build
src/launcher/: kiwix-launcher.c  kiwix-launcher.cpp
src/macosx/: Info.plist  InfoPlist.strings  PkgInfo  cleanup_rpath.py  kiwix.entitlements  kiwix_template.dmg.bz2
src/man/: kiwix-compact.1  kiwix-compact.fr.1  kiwix-index.1  kiwix-index.fr.1  kiwix-install.1  kiwix-manage.1  kiwix-read.1  kiwix-search.1  kiwix-serve.1  kiwix-serve.fr.1  kiwix.1  kiwix.fr.1  meson.build
src/manager/: Makefile.am.alt  Makefile.am.orig  Makefile.mvsc  kiwix-manage.cpp  meson.build
src/pugixml/: Makefile.am.alt  Makefile.am.orig  Makefile.mvsc
src/reader/: Makefile.am.alt  Makefile.am.orig  kiwix-read.cpp  meson.build
src/searcher/: Makefile.am.alt  Makefile.am.orig  kiwix-read.cpp  kiwix-search.cpp  meson.build
src/server/: Makefile.am.alt  Makefile.am.orig  Makefile.mvsc  README.md  benchmark.sh  kiwix-serve.cpp  meson.build  request_context.cpp  request_context.h
src/zimAccessor/: Makefile  ZimAccessorWrapper.cpp  ZimAccessorWrapper.h  zimAccessor.cpp  zimAccessor.h
src/zimTester/: Makefile  zimCTester.c  zimTester.cpp
static/: Makefile.am.alt  Makefile.am.orig  buildResourceCode.sh  meson.build  results.ct2  results.tmpl
static/jquery-ui/: jquery-ui.css  jquery-ui.theme.css
static/jqueryui/: include.html.part
static/server/: global_taskbar.html.part  home.html.tmpl  include.html.part  meson.build  opensearchdescription.xml  resources_list.txt  taskbar.css  taskbar.html.part  taskbar.js
static/stopwords/: en  fr  he
test/: meson.build
test/data/: wikipedia_en_ray_charles_mini_2020-03.zim
test/pytest/: meson.build  test_http_head.py
travis/: compile.sh  install_deps.sh  travisci_builder_id_key.enc  travisci_builder_id_key.pub
(+297 files in other folders)
